applications/nginx/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx
  namespace: finops

spec:
  selector:
    app: nginx

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http

  type: ClusterIP
