applications/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx
  namespace: finops

spec:
  ingressClassName: traefik

  rules:
    - host: nginx.sniper541.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
